force-app/main/default/objects/Stocking_Location__c/Stocking_Location__c.object-meta.xml
<CustomObject>
    <label>Stocking Location</label>
    <nameField>
        <label>Stocking Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stocking Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>