force-app/main/default/objects/Stocking_Location__c/fields/Inventory_Manager__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stocking_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>