force-app/main/default/objects/Stocking_Location__c/fields/Is_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Is_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Inventory</label>
    <type>Checkbox</type>
</CustomField>