force-app/main/default/objects/Stocking_Location__c/fields/Is_Main_Stocking_Location__c.field-meta.xml
<CustomField>
    <fullName>Is_Main_Stocking_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Main Stocking Location</label>
    <type>Checkbox</type>
</CustomField>