force-app/main/default/objects/Stocking_Location__c/fields/Physical_location__c.field-meta.xml
<CustomField>
    <fullName>Physical_location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Physical location</label>
    <type>Checkbox</type>
</CustomField>