force-app/main/default/objects/Stocking_Location__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Stocking Locations</relationshipLabel>
    <relationshipName>Stocking_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>